<resources>
    <string name="app_name">MountHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="info">info</string>
    <string name="logout">logout</string>
    <string name="confirm_password">confirm password</string>
    <string name="delete">delete</string>

    <string name="water_source">Water Source</string>
    <string name="location_type_icon">Location type icon</string>
    <string name="village">Village</string>
    <string name="default_loc">Default</string>
    <string name="mountain">Mountain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>